# imp1

./: .gitignore  .gitmodules  README.md  imp1.podspec
android/ExampleApp/: settings.gradle.kts
android/ExampleApp/app/: build.gradle.kts
android/ExampleApp/app/libs/: imp1-0.2.0.aar
android/ExampleApp/app/src/main/: AndroidManifest.xml
android/ExampleApp/app/src/main/res/values-night/: themes.xml
android/imp1/: settings.gradle.kts
android/imp1/app/: build.gradle.kts
android/imp1/app/src/main/: AndroidManifest.xml
android/imp1/app/src/main/cpp/: CMakeLists.txt  imp1.cpp
android/imp1/gradle/wrapper/: gradle-wrapper.properties
android/scripts/: build_vendor.sh
icicle-snark/icicle-snark/: PublicApi.h  icicle_snark.h  include_metal.cpp  module.modulemap
icicle-snark/icicle-snark.xcodeproj/: project.pbxproj
icicle-snark/icicle-snark.xcodeproj/project.xcworkspace/xcuserdata/jeremy.xcuserdatad/: UserInterfaceState.xcuserstate
icicle-snark/icicle-snark.xcodeproj/xcuserdata/jeremy.xcuserdatad/xcschemes/: xcschememanagement.plist
imp1/imp1/: include_metal.cpp
imp1/imp1.xcodeproj/: project.pbxproj
ios/ExampleApp/IMP1FrameworkExample/: IMP1FrameworkExampleApp.swift
ios/ExampleApp/IMP1FrameworkExample.xcodeproj/: project.pbxproj
ios/ExampleApp/IMP1FrameworkExample/Models/: Example.swift
ios/ExampleApp/IMP1FrameworkExample/Views/: MainMenuView.swift  ParallelProofView.swift  ProofGenerationView.swift
ios/ExampleApp/imp1.xcframework/: Info.plist
ios/scripts/: build_vendor.sh  build_xcframework.sh
scripts/: build_vendor.sh  build_xcframework.sh
(+37 files in other folders)
